Fix wrap issues where images were not centered

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,8 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 24px 0px;
+    justify-content: center;
 }
 
 .hero-title {
@@ -135,6 +137,7 @@ img {
     display: flex;
     gap: 40px;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .quote {
